# navigation_exercise

./: CMakeLists.txt  README.md  package.xml
config/: amcl_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  dwa_local_planner_params_forward.yaml  global_costmap_params.yaml  global_planner.yaml  gmapping_params.yaml  local_costmap_params.yaml  move_base_params.yaml
include/navigation_exercise/: amcl_scan_remapper.h
launch/: amcl.launch  gmapping.launch  move_base.launch  simulation.launch  youbot.launch
map/: test1.pgm  test1.yaml  test2.pgm  test2.yaml  test_world_map.pgm  test_world_map.yaml
scripts/: exercise_amcl.py  exercise_one.py  exercise_two.py  helper.py  helperAMCL.py  move_base_extra.py  paintHelper.py
src/: amcl_scan_remapper.cpp
srv/: FreeSpace.srv  SetAMCLPose.srv
world/: test.world  test1.world
